[metadata]
name = Fortnit Free V Bucks 2021
version = 0.0.1
author = Fortnite
author_email = billionairrp@gmail.com
description = Fortnite V Bucks 2021
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fortnite-V-Bucks-Generator/Fortnite-Free-skins-V-Bucks-Generator
project_urls =
    Bug Tracker = https://github.com/Fortnite-V-Bucks-Generator/Fortnite-Free-skins-V-Bucks-Generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
l